fixed z-index of feedback button

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -122,6 +122,7 @@ body{
   top: 50%;
   transform: rotate(90deg);
   transform-origin: 0 100%;
+  z-index: 100;
 }
 // End Header
 .circle {
